tests/v0_4/valid/step_basic.devops
target "local" {
  address = "localhost"
}

// Basic step definition
step "sync_files" {
  type = file.sync
  src  = "./build"
  dest = "/var/www"
}

// Use the step
node "deploy" {
  type = sync_files
  targets = [local]
}
