tests/v0_4/invalid/step_unknown_primitive.devops
target "local" {
  address = "localhost"
}

// Step with unknown primitive type
step "bad_step" {
  type = unknown.primitive
  some_input = "value"
}

node "deploy" {
  type = bad_step
  targets = [local]
}
